# fresh-bakery

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yaml  publish.yaml
bakery/: __init__.py  bakery.py  bakery.pyi  baking.py  cake.py  mypy.py  piece_of_cake.py  shape.py  stuff.py  testbakery.py
bakery/stuff/: __init__.py  cake_stuff.py  log_stuff.py  stuff.py  types.py
docs/: bakery_and_cakes.md  bakery_and_cakes_advanced.md  bakery_di.md  bakery_examples.md  baking_methods.md  dependency_injection.md  index.md  requirements.txt  test_bakery.md
examples/bakery_tester1/: pyproject.toml
examples/bakery_tester1/test_app/: __main__.py  bakery.py
examples/bakery_tester1/test_app/cron/: bakery.py  base.py  projects_capacity.py
examples/bakery_tester1/test_app/routes/: get_info.py
examples/bakery_tester1/tests/: conftest.py  test_get_info.py
examples/bakery_tester2/: alembic.ini  docker-compose.yml  pyproject.toml
examples/bakery_tester2/alembic/: env.py
examples/bakery_tester2/alembic/versions/: 357e5326cdf1_create_person_table.py
examples/bakery_tester2/test_app/: __main__.py  bakery.py  config.py
examples/bakery_tester2/test_app/adapters/: db_adapter.py
examples/bakery_tester2/test_app/controllers/: controller.py
examples/bakery_tester2/test_app/views/: common.py
examples/bakery_tester2/tests/: conftest.py  test_get_person.py  test_integration.py
examples/docs_bakery_di_example/: pyproject.toml
examples/docs_bakery_di_example/test_app/: __main__.py
examples/docs_fastapi_example/: pyproject.toml
examples/docs_fastapi_example/test_app/: __main__.py
examples/litestar_tester/: pyproject.toml
examples/litestar_tester/test_app/: __main__.py
examples/litestar_tester/tests/: test_route_handler.py
tests/: __init__.py  conftest.py  test_anon_cakes_unbaked.py  test_bakery.py  test_bakery_as_cake.py  test_bakery_mock.py  test_cake_baking_methods.py  test_cake_copy.py  test_cake_hooks.py  test_cake_special_attributes.py  test_cake_unpacking.py  test_cakes_baking.py  test_default_logger.py  test_partial_bakery.py  test_piece_of_cake_as_cake.py  test_recipe_format.py
tests/bakery_di/: misc.py  test_bakery_di.py  test_bakery_di_arguments_missing.py  test_bakery_di_class_attribute.py  test_bakery_di_existing_attributes.py  test_bakery_di_multiple_openings.py  test_bakery_di_with_cake.py  test_bakery_di_with_piece_of_cake.py  test_bakery_into_bakery.py  test_cake_replacement.py  test_di_item_not_bakery_item.py  test_multiple_cake_replacement_is_prohibited.py
tests/bakery_mock/: __init__.py  test_complex_bakery_mock.py  test_deprecated_direct_assignment.py  test_docs_examples.py  test_mock_after_open.py  test_nested_cakes.py  test_patch_before_open.py
tests/docs_examples/: test_almost_file_examples.py  test_quick_start_example.py  test_raw_example.py
