[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ["py310"]
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 99
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
no_lines_before = ['STDLIB', 'LOCALFOLDER']
known_third_party = [
    'pytest',
]
known_local_folder = []
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
use_parentheses= true


[tool.poetry]
name = "fresh-bakery"
version = "0.1.0"
description = "Bake your dependencies stupidly simple!"
readme = "README.md"
license = "MIT"
authors = ["Dmitry Makarov <mit.makaroff@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "bakery" },
    { include = "bakery/py.typed" }
]

[tool.poetry.plugins."pytest11"]
"bakery_mock" = "bakery.testbakery"

[tool.pytest.ini_options]
trio_mode = "true"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.11"

[tool.poetry.dev-dependencies]
black = "*"
pydocstringformatter = [
    {version = "*", python = ">=3.8,<3.11"},
]
isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-trio = "*"
autoflake = "*"
pytest-mock = "*"
trio = "*"
types-dataclasses = "*"
sort-all = "*"
tox = "*"

[tool.pylint]
# https://pylint.pycqa.org/en/latest/user_guide/configuration/all-options.html
[tool.pylint.master]
jobs = 0
disable = ["unnecessary-dunder-call"]
ignore = ["CVS", "examples/"]
[tool.pylint.messages_control]
max-line-length = 120
[tool.pylint.classes]
exclude-protected = ['_asdict', '_fields', '_replace', '_source', '_make', "_name"]
valid-classmethod-first-arg = "cls"
[tool.pylint.design]
max-branches = 15
max-returns = 8
max-statements = 50
min-public-methods = 0


[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.6"
plugins = 'bakery.mypy'
exclude = ["examples", "bakery/__init__.py", "bakery/mypy.py"]
warn_unused_configs = true
ignore_missing_imports = true
disallow_incomplete_defs = true


[tool.coverage]
[tool.coverage.run]
omit = [
    '__init__.py',
]
[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36,py37,py38,py39,py310

[testenv]
deps =
    black
    isort
    pylint

    pytest
    pytest-mock
    typing_extensions
    pytest-trio
    types-dataclasses

    mypy
commands = 
    black --check bakery/ tests/
    isort --check bakery tests/
    pylint bakery/ tests/  --disable=no-self-use,R0801,cyclic-import
    mypy bakery/ tests/ 
    pytest tests/ -x
setenv =
    PIP_INDEX_URL = {env:PIP_INDEX_URL:https://pypi.org/simple/}

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
"""
