[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fresh-bakery"
version = "0.4.2"
description = "Bake your dependencies stupidly simple!"
readme = "README.md"
license = "MIT"
authors = ["Dmitry Makarov <mit.makaroff@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "Dependency Injection",
    "Dependency Injection pattern",
    "Constructor Injection",
    "Inversion of Control",
    "Inversion of Control Container",
    "IoC",
]
packages = [
    { include = "bakery" },
    { include = "bakery/py.typed" }
]

[tool.poetry.urls]
"Documentation" = "https://fresh-bakery.readthedocs.io/en/latest/"
"Changelog" = "https://github.com/Mityuha/fresh-bakery/releases"
"Source" = "https://github.com/Mityuha/fresh-bakery"
"Tracker" = "https://github.com/Mityuha/fresh-bakery/issues"

[tool.poetry.plugins."pytest11"]
"bakery_mock" = "bakery.testbakery"


[tool.pytest.ini_options]
trio_mode = "true"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[tool.poetry.group.dev.dependencies]
mypy = [
    {version = "^1.11.0", python = ">=3.8"},
]
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-trio = "*"
pytest-mock = "*"
trio = "*"
sort-all = "*"
tox = "*"
ruff = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# documentation
mkdocs = "^1.3.1"
mkautodoc = "^0.2.0"
pymdown-extensions = "^9.1"
mkdocs-material = "^8.2.11"
jinja2 = "^3.0.3"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".github",
    ".hg",
    ".idea",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "node_modules",
    "examples",
    "site-packages",
    "venv",
]
fix = true
unsafe-fixes = true
show-fixes = true
line-length = 99
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "F403",
    "D401",
    "ANN401",
    "D105",
    "SLF001",
    "D213",
    "D203",
    "COM812",
    "ISC001",
    "D413"
]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "D103",
    "D101",
    "C901",
    "PLR2004",
]

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.8"
plugins = 'bakery.mypy'
exclude = ["examples", "bakery/__init__.py", "bakery/mypy.py"]
warn_unused_configs = true
ignore_missing_imports = true
disallow_incomplete_defs = true

[tool.coverage]
[tool.coverage.run]
omit = [
    '__init__.py',
]
[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38,py39,py310,py311,py312

[testenv]
deps =
    pytest>=8.3.3
    pytest-mock==3.14.0
    typing_extensions==4.12.2
    pytest-trio==0.8.0

    mypy==1.11.2
    ruff==0.6.5

commands =
    ruff check .
    ruff format --check .
    mypy bakery/ tests/ 
    pytest tests/ -x
setenv =
    PIP_INDEX_URL = {env:PIP_INDEX_URL:https://pypi.org/simple/}

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
"""
