[tool.black]
line-length = 99
target-version = ["py310"]
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
no_lines_before = ['STDLIB', 'LOCALFOLDER']
known_third_party = [
    'pytest',
]
known_local_folder = []
multi_line_output = 3
lines_after_imports = 2
[tool.poetry]
name = "test_app_2"
version = "0.0.1"
description = "Real bakery tests 2"
authors = ["Dmitry Makarov"]
classifiers = ["Programming Language :: Python :: 3.10"]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "*"
asyncpg= "*"
databases = {version = "*", extras = ["postgresql"]}
uvicorn = "*"
fastapi = "*"
loguru = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
pylint = "*"
autoflake = "*"
pytest = "*"
pytest-cov = "*"
psycopg2-binary = "*"
alembic = "*"
pytest-mock = "*"
pytest-asyncio = "*"
httpx = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-p bakery.testbakery"

[tool.mypy]
plugins = ["bakery.mypy"]
