[tool.poetry]
name = "litestar_tester"
version = "0.1.0"
description = ""
authors = ["mityuha <mit.makaroff@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.22.0"
pytest = "^7.4.0"
fresh-bakery = {path = "../.."}
litestar = "^2.12.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = "bakery.mypy"


[tool.pytest.ini_options]
asyncio_mode = "auto"
